Correction de l'alignement des lignes des tableaux dans contrats

--- a/project/web/css/contrats.less
+++ b/project/web/css/contrats.less
@@ -333,6 +333,8 @@
         width: 329px;
     }
 
+    .ligne_form { height: 38px; } 
+
     #recherche_operateur
     {
         background:@couleur-a5;
